--- a/manifest.json
+++ b/manifest.json
@@ -4,19 +4,22 @@
   "description": "Calendário de Escalas BBraun Brasil e Alemanha",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#00A97A",
+  "background_color": "#121212",
   "theme_color": "#00A97A",
   "orientation": "portrait",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/2370/2370264.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "https://cdn-icons-png.flaticon.com/512/2370/2370264.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     }
   ]
 }
+
