--- a/manifest.json
+++ b/manifest.json
@@ -2,24 +2,16 @@
   "name": "BBraun Scales 2026",
   "short_name": "BBraun 2026",
   "description": "Calendário de Escalas BBraun Brasil e Alemanha",
-  "start_url": "index.html",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#121212",
+  "background_color": "#ffffff",
   "theme_color": "#00A97A",
-  "orientation": "portrait",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2370/2370264.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "https://cdn-icons-png.flaticon.com/512/2370/2370264.png",
+      "src": "calendar.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     }
   ]
 }
-
