--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,16 @@
   "theme_color": "#00A97A",
   "icons": [
     {
+      "src": "calendar-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
       "src": "calendar.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     }
   ]
 }
